--- a/buisnes.html
+++ b/buisnes.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header_one">
+        <div class="header_one" id="nav">
             <nav class="nav_list container">
                 <ul class="nav_menu">
                     <li class="nav_menu__items">
@@ -41,7 +41,8 @@
         <div class="container header_two">
             <div class="logo">
                 <a href="" class="logo_item">
-                    <img src="img/logo_png.png" alt="logo_png">
+                    <img src="img/logo_png.png" alt="logo_png" class="header_logo-one">
+                    <img src="img/footer_logo.png" alt="logo_png" class="header_logo-two">
                 </a>
             </div>
             <div class="header_number">
@@ -65,6 +66,9 @@
                         </a>
                     </div>
                 </div>
+            </div>
+            <div class="menu-burger__header" id="contain">
+                <span></span>
             </div>
         </div>
     </header>
@@ -184,6 +188,9 @@
                                 Даже при сохранении доходов не все смогут выехать на отдых, т.к. границы закрыты, а наш юг физически не сможет принять всех желающих.
                             </p>
                         </div>
+                    </div>
+                    <div class="reasons__item-img_phone">
+                        <img src="img/biz_03.jpg" alt="room">
                     </div>
                 </div>
                 <div class="communication__descr">
@@ -386,6 +393,9 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="__item">
+                            <img src="img/room_one.jpg" alt="room">
+                        </div>
                         <p>
                             Это около 30% от общей выручки. Ещё примерно 40% стоит вычесть из-за возможной недозагрузки комплекса посетителями. <span>Чистая прибыль в среднем составляет 147 тыс. рублей в месяц.</span> При вложении средств в размере 350 тыс. рублей окупаемость наступит уже через 4-6 месяцев.
                         </p>
@@ -427,6 +437,10 @@
                         <button>
                             ЗАКАЗАТЬ ЗВОНОК
                         </button>
+
+                        <div class="__item">
+                            <img src="img/room_two.jpg" alt="room">
+                        </div>
                 </div>
                 <div class="reasons">
                     <div class="advantages">
@@ -541,12 +555,15 @@
                     <h3>
                         НУЖНА ПОМОЩЬ?
                     </h3>
+                    <div class="img__item">
+                        <img src="img/footer_img_three.jpg" alt="woman">
+                    </div>
                     <p>
                         Сообщите о вашей задаче/проблеме/идее
                         и мы предложим вам варианты ее решения.   
                     </p>
                     <p>
-                        Просто заполните форму справа.
+                        Просто заполните форму <span class="right">справа.</span> <span class="down">снизу.</span>
                     </p>
                 </div>
                 <div class="wrapper__form">
@@ -567,57 +584,60 @@
             <div class="container footer_last">
                 <div class="footer_item">
                     <img src="img/footer_logo.png" alt="logo" class="footer_logo">
-                    <p class="footer_descr">
+                    <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
-                    <p class="footer_descr">
+                    <p class="footer_descr footer_descr__none">
                         Все права защищены. Перепечатка материалов и фотографий без согласования с владельцами сайта запрещена.
                     </p>
                 </div>
-                <div class="footer_item">
-                    <nav class="footer_nav">
-                        <ul class="footer_items_ul">
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">О НАС</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">НАШИ РАБОТЫ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">ОТЗЫВЫ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">СТАТЬИ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">НАША КОМАНДА</a>
-                            </li>
-                        </ul>
-                    </nav>
+                <div class="footer__flex-item">
+                    <div class="footer_item">
+                        <nav class="footer_nav">
+                            <ul class="footer_items_ul">
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">О НАС</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">НАШИ РАБОТЫ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">ОТЗЫВЫ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">СТАТЬИ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">НАША КОМАНДА</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer_item">
+                        <nav class="footer_nav">
+                            <ul class="footer_items_ul">
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">БИЗНЕС-ИДЕЯ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">ГОТОВОМУ БИЗНЕСУ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">ОБУЧЕНИЕ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">ГАЛОГЕНЕРАТОРЫ</a>
+                                </li>
+                                <li class="footer_item_menu">
+                                    <a href="" class="footer_menu">ГАЛЕРЕЯ</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
+
                 <div class="footer_item">
-                    <nav class="footer_nav">
-                        <ul class="footer_items_ul">
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">БИЗНЕС-ИДЕЯ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">ГОТОВОМУ БИЗНЕСУ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">ОБУЧЕНИЕ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">ГАЛОГЕНЕРАТОРЫ</a>
-                            </li>
-                            <li class="footer_item_menu">
-                                <a href="" class="footer_menu">ГАЛЕРЕЯ</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="footer_item">
-                    <a href="" class="footer_descr">
+                    <a href="" class="footer_descr footer_descr_phone">
                         Свяжитесь с нами
                     </a>
                     <div class="footer_icon">
@@ -636,6 +656,12 @@
                             Соглашение об обработке персональных данных
                         </a>
                     </div>
+                    <p class="footer_descr footer_descr__phone">
+                        © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
+                    </p>
+                    <p class="footer_descr footer_descr__phone">
+                        Все права защищены. Перепечатка материалов и фотографий без согласования с владельцами сайта запрещена.
+                    </p>
                 </div>
             </div>
         </div>
@@ -660,7 +686,7 @@
           <div class="wrapper__form">
             <h2 class="modal__title">Задать вопрос</h2>
             <form action="" class="form__items">
-                <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
+              <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
               <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш Телефон*">
               <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
               <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control text"  placeholder="Задайте ваш вопрос*"></textarea>
